@@ -107,7 +107,7 @@ public:
         // we can't know in advance whether we can sort by this column or not
         // with wxGrid API so suppose we can by default
         int flags = wxCOL_SORTABLE;
-        if ( m_grid->CanDragColSize() )
+        if ( m_grid->CanDragColSize(m_col) )
             flags |= wxCOL_RESIZABLE;
         if ( m_grid->CanDragColMove() )
             flags |= wxCOL_REORDERABLE;
@@ -500,9 +500,6 @@ public:
     // Set the row default height or column default width
     virtual void SetDefaultLineSize(wxGrid *grid, int size, bool resizeExisting) const = 0;
 
-    // True if rows/columns can be resized by user
-    virtual bool CanResizeLines(const wxGrid *grid) const = 0;
-
 
     // Return the index of the line at the given position
     //
@@ -572,10 +569,8 @@ public:
         { return grid->GetRowMinimalHeight(line); }
     virtual void SetLineSize(wxGrid *grid, int line, int size) const
         { grid->SetRowSize(line, size); }
-    virtual bool CanResizeLines(const wxGrid *grid) const
-        { return grid->CanDragRowSize(); }
     virtual void SetDefaultLineSize(wxGrid *grid, int size, bool resizeExisting) const
-        {  grid->SetDefaultRowSize(size, resizeExisting); } 
+        {  grid->SetDefaultRowSize(size, resizeExisting); }
 
     virtual int GetLineAt(const wxGrid * WXUNUSED(grid), int line) const
         { return line; } // TODO: implement row reordering
@@ -635,10 +630,8 @@ public:
         { return grid->GetColMinimalWidth(line); }
     virtual void SetLineSize(wxGrid *grid, int line, int size) const
         { grid->SetColSize(line, size); }
-    virtual bool CanResizeLines(const wxGrid *grid) const
-        { return grid->CanDragColSize(); }
     virtual void SetDefaultLineSize(wxGrid *grid, int size, bool resizeExisting) const
-        {  grid->SetDefaultColSize(size, resizeExisting); } 
+        {  grid->SetDefaultColSize(size, resizeExisting); }
 
     virtual int GetLineAt(const wxGrid *grid, int line) const
         { return grid->GetColAt(line); }
